<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">File On The Spot Claim</string>
    <string name="title_activity_policy_holder_details">Policy Holder Details</string>
    <string name="title_activity_vehicle_details">Vehicle Details</string>
    <string name="title_activity_accident_details">Accident Details</string>
    <string name="title_activity_statements">Statements</string>
    <string name="title_activity_driver_details">Driver Details</string>
    <string name="title_activity_documents">Documents</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exist_claim">Existing Claims</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
    <string name="policyNo">Policy No.</string>
    <string name="coverNoteNo">Cover Note No.</string>
    <string name="period">Period of Insurance:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="nameInsured">Name of Insured:</string>
    <string name="phoneOff">Phone Off:</string>
    <string name="gender">Gender:</string>
    <string name="dob">Date of Birth:</string>
    <string name="address">Address (Please note - If the Claim is approved, the Claim payment Cheque shall be dispatched at the address mentioned herein)</string>
    <string name="phoneRes">Phone Res.:</string>
    <string name="mobile">Mobile:</string>
    <string name="pin">Pin:</string>
    <string name="email">Email:</string>
    <string name="regdNo">Regd. No.:</string>
    <string name="make">Make:</string>
    <string name="dateOfFirstReg">Date of 1st Registration:</string>
    <string name="chassisNo">Chassis No.:</string>
    <string name="engineNo">Engine No.:</string>
    <string name="dateOfTx">Date of Transfer(if applicable):</string>
    <string name="typeOfFuel">Type of Fuel:</string>
    <string name="colour">Colour of Vehicle:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="speed">Speed:</string>
    <string name="exactPlace">Exact place of accident:</string>
    <string name="noOfPeople">"No. of people travelling:"</string>
    <string name="policeStation">Nearest Police Station:</string>
    <string name="policeStationName">Name of Police Station:</string>
    <string name="firNo">Gen. Diary/Crime No/FIR No.:</string>
    <string name="mileage">Mileage:</string>
    <string name="uploadStatement">Upload your statements here:</string>
    <string name="driver">Driver:</string>
    <string name="passenger">Passenger:</string>
    <string name="thirdParty">Third Party:</string>
    <string name="witness">Witness:</string>
    <string name="uploadVedio">Upload Vedio</string>
    <string name="name">Name:</string>
    <string name="relation">Relation with Insured:</string>
    <string name="driverAddress">Address:</string>
    <string name="contactNumber">Contact Number:</string>
    <string name="dobLicense">Date of Birth:</string>
    <string name="dlNo">Driving License No.:</string>
    <string name="issuingRTO">Issuing RTO:</string>
    <string name="effectiveFrom">License Effective From:</string>
    <string name="expiryDate">License Expiry Date:</string>
    <string name="vehicleClass">Class:</string>
    <string name="driverType">Type:</string>
    <string name="attachDocuments">Attach your documents here:</string>
    <string name="insuranceCopy">Insurance Copy:</string>
    <string name="rc">RC Copy:</string>
    <string name="license">License Copy:</string>
    <string name="damagedCar">Damaged Car:</string>
    <string name="damagedCarThirdParty">Damaged Car (Third Party):</string>
    <string name="bills">Garage Bills:</string>
    <string name="fir">FIR Copy:</string>
    <string name="attachImage">Attach Image</string>
    <string name="title_activity_get_existing_claims">Existing Claims</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="classPrompt">Choose Class</string>
    <string name="typePrompt">Choose Type</string>

    <string-array name="classArray">
        <item>MCycle</item>
        <item>LMV</item>
        <item>HGV</item>
        <item>Transport</item>
        <item>Non-Transport</item>
    </string-array>
    <string-array name="typeArray">
        <item>Permanent</item>
        <item>Learners</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <string name="enterDetails">Enter your Policy Details here:</string>
    <string name="enterDetails1">Enter your Vehicle Details here:</string>
    <string name="enterDetails2">Upload your Documents here:</string>
    <string name="driverDetails">Driver Details</string>
    <string name="self">Self</string>
    <string name="towVehicle">Need a Tow Vehicle</string>
    <string name="selectDate">Select Date</string>
    <string name="map">Show on Map</string>
    

</resources>