<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com..fileonthespotclaim.SettingsActivity" >

    <TextView
        android:id="@+id/enterDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enterDetails" />
    
     <TextView
            android:id="@+id/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/period"
            android:layout_alignStart="@+id/period"
            android:layout_below="@+id/period"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/from" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/period"
            android:layout_alignStart="@+id/period"
            android:layout_below="@+id/to"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/nameInsured" />

        <TextView
            android:id="@+id/pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/address"
            android:layout_alignStart="@+id/address"
            android:layout_below="@+id/address"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/pin" />

        <TextView
            android:id="@+id/phoneOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pin"
            android:layout_alignStart="@+id/pin"
            android:layout_below="@+id/pin"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:text="@string/phoneOff" />

        <TextView
            android:id="@+id/policyNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterDetail"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/policyNo" />

        <TextView
            android:id="@+id/coverNoteNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/period"
            android:layout_alignStart="@+id/period"
            android:layout_below="@+id/policyNo"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/coverNoteNo" />

        <TextView
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/coverNoteNo"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/period" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/name"
            android:layout_alignStart="@+id/name"
            android:layout_below="@+id/name"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/dob" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dob"
            android:layout_alignStart="@+id/dob"
            android:layout_below="@+id/dob"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/address" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/from"
            android:layout_alignStart="@+id/from"
            android:layout_below="@+id/from"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/to" />

        <TextView
            android:id="@+id/phoneRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phoneOff"
            android:layout_alignStart="@+id/phoneOff"
            android:layout_below="@+id/phoneOff"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/phoneRes" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phoneRes"
            android:layout_alignStart="@+id/phoneRes"
            android:layout_below="@+id/phoneRes"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/mobile" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mobile"
            android:layout_alignStart="@+id/mobile"
            android:layout_below="@+id/mobile"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/email" />

</RelativeLayout>
